--- a/webapp/WEB-INF/classes/.gitignore
+++ b/webapp/WEB-INF/classes/.gitignore
@@ -1,7 +1,3 @@
-/com/
-<<<<<<< HEAD
 /ProvinceDao/
-=======
-/web/
-/university/
->>>>>>> branch 'master' of https://github.com/don764372409/EnrollSystem.git
+/com/
+/province/
