--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
 *.class
 .classpath
 .project
-/
-/build/
-=======
-*.class
->>>>>>> branch 'master' of https://github.com/don764372409/EnrollSystem.git
+/.settings
