--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//webapp/WEB-INF/admin/list.jsp=UTF-8
+encoding//webapp/WEB-INF/university/university.jsp=UTF-8
 encoding//webapp/WEB-INF/university/universityAdd.jsp=UTF-8
 encoding/<project>=UTF-8
