--- a/config/db.properties
+++ b/config/db.properties
@@ -1,6 +1,6 @@
-alibaba.url=jdbc:mysql://122.114.0.52:3306/enroll?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+alibaba.url=jdbc:mysql:///enroll?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 alibaba.username=root
-alibaba.password=100-99=yi.0
+alibaba.password=admin
 alibaba.pool.initialSize=1
 alibaba.pool.minIdle=1
 alibaba.pool.maxActive=100
