--- a/config/db.properties
+++ b/config/db.properties
@@ -1,4 +1,4 @@
-alibaba.url=jdbc:mysql:///enroll?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+alibaba.url=jdbc:mysql://server/enroll?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 alibaba.username=root
 alibaba.password=admin
 alibaba.pool.initialSize=1
